Ajouter de nouvelles recettes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Recette</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/pizza_chevre_miel.html">Recette : Pizza Chèvre Miel</a>
+        <a href="recipes/crêpes.html">Recette : Crêpes</a>
+        <a href="recipes/merguez.html">Recette : Merguez</a>
     </body>
 </html>
