--- a/recipes/pizza_chevre_miel.html
+++ b/recipes/pizza_chevre_miel.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza chèvre miel</title>
 </head>
 <body>
     <h1>Pizza Chèvre Miel</h1>
@@ -18,6 +18,7 @@
         <li>Basilic</li>
     </ul>
 
+    <h2>Préparation : </h2>
     <ol>
         <li>étalez la pâte et couvrez-la de crème fraîche épaisse</li>
         <li>Découpez le fromage de chèvre en rondelles et disposez les sur la crème fraîche
