Ajouter un saut de ligne sur chaque lien

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/pizza_chevre_miel.html">Recette : Pizza Chèvre Miel</a>
-        <a href="recipes/crêpes.html">Recette : Crêpes</a>
-        <a href="recipes/merguez.html">Recette : Merguez</a>
+        <a href="recipes/pizza_chevre_miel.html"><p>Recette : Pizza Chèvre Miel</p></a>
+        <a href="recipes/crêpes.html"><p>Recette : Crêpes</p></a>
+        <a href="recipes/merguez.html"><p>Recette : Merguez</p></a>
     </body>
 </html>
